--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/vue": "^5.0.0-beta.3",
     "@tailwindcss/vite": "^4.1.4",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@iconify/tailwind4": "^1.0.6",
     "@vitejs/plugin-vue": "^5.2.2",
     "vite": "^6.3.1"
   }
