--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.address=0.0.0.0
 server.port=8080
 
 # Database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/ecoverdeconnect?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/ecoverdeconnect?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=12345
 
 # JPA and Hibernate
 spring.jpa.hibernate.ddl-auto=update
