--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@iconify/vue": "^5.0.0-beta.3",
     "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.9.0",
     "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
