--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@iconify/tailwind4": "^1.0.6",
+    "@types/axios": "^0.14.4",
     "@vitejs/plugin-vue": "^5.2.2",
     "vite": "^6.3.1",
     "vite-plugin-node-polyfills": "^0.23.0"
