--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # Database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/ecoverdeconnect?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=root
 
 # JPA and Hibernate
 spring.jpa.hibernate.ddl-auto=update
